Added styles and v-if commands for sortation and filter additions

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
             </header>
     
             <main>
-                <div class="filSor">
+                <div class="filSor" v-if="showProduct">
                     <div class="filter">
+                        <label for="filter">Select Filter</label>
                         <select name="filters" id="filters">
+                            <option value="">Default</option>
                             <option value="sports">Sports</option>
                             <option value="entertinment">Entertinment</option>
                             <option value="programming">Programming</option>
@@ -45,7 +47,9 @@
                         </select>
                     </div>
                     <div class="sort">
+                        <label for="sort">Select Sort</label>
                         <select name="sorts" id="sorts">
+                            <option value="default">Default</option>
                             <option value="nameAsc">Names (A - Z)</option>
                             <option value="nameDes">Names (Z - A)</option>
                             <option value="priceAsc">Price (Low - High)</option>
