--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
         <link rel="stylesheet" href="/Styles/styles.css">
         <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
-        <script src="/Scripts/programs.js"></script>
+        <!-- <script src="/Scripts/programs.js"></script> -->
         <title>Xkool eShop</title>
     </head>
     <body>
@@ -27,7 +27,7 @@
                     <button @click="showCheckOut" v-if="cart.length >= 1">
                         Cart
                         <span class="fa-solid fa-cart-plus"></span>
-                        <span id="cartCount"><strong> {{ cart.length }} </strong></span>
+                        <span id="cartCount"><strong> {{ count1 }} </strong></span>
                     </button>
                     <button v-else>
                         Cart <span class="fa-solid fa-cart-plus"></span>
@@ -94,10 +94,11 @@
                                 <p>Program ID: {{ program.id }} </p>
                                 <p><strong>{{ program.title }}</strong></p>
                                 <p>Price: Rs{{ program.price }}</p>
+                                <p>Count: {{ program.count }}</p>
                                 <button @click="removeFromCart(program)">Remove</button>
                             </li>
                         </ul>
-                        <p v-if="cartDetails.length === 0">Your cart is empty!</p>
+                        <!-- <p v-if="cartDetails.length === 0">Your cart is empty!</p> -->
                         <hr>
                         <h3>Total: Rs {{ totalPrice }}</h3>
                     </div>
