--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/x-icon" href="/Media/logo.jpg">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
         <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
         <link rel="stylesheet" href="/Styles/styles.css">
@@ -39,12 +40,12 @@
                 <div class="filSor" v-if="showPage">
                     <div class="filter">
                         <label for="filter">Select Filter</label>
-                        <select name="filters" id="filters">
+                        <select name="filters" id="filters" v-model="selectedFilter">
                             <option value="">Default</option>
                             <option value="sports">Sports</option>
                             <option value="music">Music</option>
                             <option value="art">Arts</option>
-                            <option value="education">STEM</option>
+                            <option value="education">Education</option>
                         </select>
                     </div>
                     <div class="sort">
@@ -62,7 +63,7 @@
                 </div>
                 <!-- Product Grid -->
                 <div class="program-container" v-if="showPage">
-                    <div class="program-card" v-for="program in sortedPrograms">
+                    <div class="program-card" v-for="program in filteredAndSorted">
                         <img :src="program.image" alt="Program Image">
                         <h3>{{ program.title }}</h3>
                         <p>{{ program.description }}</p>
@@ -94,7 +95,7 @@
                                 <p>Program ID: {{ program.id }} </p>
                                 <p><strong>{{ program.title }}</strong></p>
                                 <p>Price: Rs{{ program.price }}</p>
-                                <p>Count: {{ program.count }}</p>
+                                <p v-if="program.count > 1">Spaces: {{ program.count }}</p>
                                 <button @click="removeFromCart(program)">Remove</button>
                             </li>
                         </ul>
