--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/x-icon" href="/Media/logo.jpg">
+        <link rel="icon" type="image/x-icon" href="Media/logo.jpg">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
         <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
-        <link rel="stylesheet" href="/Styles/styles.css">
+        <link rel="stylesheet" href="Styles/styles.css">
         <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
-        <!-- <script src="/Scripts/programs.js"></script> -->
         <title>Xkool eShop</title>
     </head>
     <body>
         <div id="xkool-webstore">
             <header>
                 <div class="logo">
-                    <img src="/Media/logo.jpg" alt="eShop Logo">
+                    <img src="Media/logo.jpg" alt="eShop Logo">
                 </div>
                 <nav>
                     <a href="#">Home</a>
@@ -124,6 +123,6 @@
                 </div>
             </main>
         </div>
-        <script src="/Scripts/script.js"></script>
+        <script src="Scripts/script.js"></script>
     </body>
 </html>
