--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/x-icon" href="Media/logo.jpg">
+        <link rel="icon" type="image/x-icon" href="https://xkool-eshop-backend.onrender.com/Media/logo.jpg">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
         <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
         <link rel="stylesheet" href="Styles/styles.css">
@@ -14,7 +14,7 @@
         <div id="xkool-webstore">
             <header>
                 <div class="logo">
-                    <img src="http://localhost:5454/Media/logo.jpg" alt="eShop Logo">
+                    <img src="https://xkool-eshop-backend.onrender.com/Media/logo.jpg" alt="eShop Logo">
                 </div>
                 <nav>
                     <a href="#">Home</a>
@@ -63,7 +63,7 @@
                 <!-- Product Grid -->
                 <div class="program-container" v-if="showPage">
                     <div class="program-card" v-for="program in filteredAndSorted">
-                        <img :src="'http://localhost:5454/' + program.image" alt="Program Image">
+                        <img :src="'https://xkool-eshop-backend.onrender.com/' + program.image" alt="Program Image">
                         <h3>{{ program.title }}</h3>
                         <p>{{ program.description }}</p>
                         <p>Price: £ {{ program.price }}</p>
@@ -91,7 +91,7 @@
                         <ul>
                             <!-- Loop through cart items and display details -->
                             <li v-for="program in cartDetails" :key="program.id">
-                                <div class="cartImg"><img :src="'http://localhost:5454/' + program.image" alt="Program Image"></div>
+                                <div class="cartImg"><img :src="'https://xkool-eshop-backend.onrender.com/' + program.image" alt="Program Image"></div>
                                 <div>
                                     <p>Program ID: {{ program.id }} </p>
                                     <p><strong>{{ program.title }}</strong></p>
